# git-clean-branches

./: README.md  prek.toml  pyproject.toml
src/git_clean_branches/: __init__.py
