[project]
name = "git-clean-branches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plumbum>=2.0.1",
]

[project.scripts]
git-clean-branches = "git_clean_branches:App.main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.47.1",
    "prek>=0.4.6",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "D203", "D212", "ANN202"]

[tool.poe.tasks]
fix = "uv run ruff check --fix-only"
lint = "uv run ruff check"
ty = "uv run ty check"
check = ["fix", "lint", "ty"]
prek = "uv run prek run"
